--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "pterodactyl-panel",
+    "name": "nitroactyl",
+    "packageManager": "pnpm@7.26.3",
     "engines": {
-        "node": ">=14"
+        "node": ">=16.13"
     },
     "dependencies": {
         "@floating-ui/react-dom-interactions": "^0.6.6",
