--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,4 +9,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      
+  - package-ecosystem: "yarn"
+    directory: "/" 
+    schedule:
+      interval: "daily"
