--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "pragmarx/google2fa": "~8.0.0",
         "predis/predis": "~2.1.1",
         "prologue/alerts": "~1.1.0",
+        "protonemedia/laravel-splade": "^1.4",
         "psr/cache": "~3.0.0",
         "s1lentium/iptools": "~1.2.0",
         "spatie/laravel-fractal": "~6.0.3",
