--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "node": ">=16.13"
     },
     "dependencies": {
+        "@codemirror/lint": "^6.2.2",
         "@floating-ui/react-dom-interactions": "^0.6.6",
         "@fortawesome/fontawesome-svg-core": "^1.2.32",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -31,6 +32,7 @@
         "i18next": "^21.8.9",
         "i18next-http-backend": "^1.4.1",
         "i18next-multiload-backend-adapter": "^1.0.0",
+        "million": "^2.4.5",
         "qrcode.react": "^1.0.1",
         "react": "^16.14.0",
         "react-chartjs-2": "^4.2.0",
